# OCRPA

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/api/: __init__.py  dependency.py
src/api/common/: response.py
templates/: ocr.html
